Add OpenAPI configuration and improve security and CORS handling
- Introduce `OpenApiConfig` for API documentation, including API metadata and JWT auth schemes.
- Replace `hasRole('USER')` with `hasAuthority('ROLE_USER')` across `PlanController`.
- Enhance CORS handling in `SecurityConfig` with wildcard origin patterns, exposed headers, and updated methods.
- Refactor security rules for endpoint access and JWT token handling.